--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
       font-family: Arial, sans-serif;
       background-color: #0f0f0f;
       color: #ffffff;
-      overflow: auto;
+      overflow: hidden;
+    }
+
+    header {
+      display: flex;
+      background-color: #1a1a1a;
+      justify-content: space-between;
+      padding-left: 50px;
+      padding-right: 15px;
+    }
+
+    #logo-text {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 19.5px;
+        font-weight: 900;
+        color: #ceb2ff;
     }
 
     nav {
@@ -18,7 +33,6 @@
       display: flex;
       justify-content: center;
       padding: 15px 0;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
       position: relative;
       z-index: 2;
     }
@@ -40,7 +54,7 @@
     section {
       display: none;
       max-width: 800px;
-      margin: 30px auto;
+      margin: 150px auto;
       background-color: #1a1a1a;
       padding: 25px;
       border-radius: 12px;
@@ -80,8 +94,7 @@
       font-weight: bold;
       cursor: pointer;
     }
-
-    /* 🔧 Cor roxa ao passar o mouse sobre o botão */
+    
     .form-group input[type="submit"]:hover {
       background-color: #6930cf;
       color: #ffffff;
@@ -121,27 +134,30 @@
   </style>
 </head>
 <body>
-  <script>
-    const colors = ['#8146eb', '#6930cf'];
-    for (let i = 0; i < 100; i++) {
-      const particle = document.createElement('div');
-      particle.classList.add('particle');
-      particle.style.left = `${Math.random() * 100}vw`;
-      particle.style.top = `${Math.random() * 100 + 100}vh`;
-      particle.style.background = colors[Math.floor(Math.random() * colors.length)];
-      particle.style.animationDuration = `${5 + Math.random() * 5}s`;
-      particle.style.animationDelay = `${Math.random() * 5}s`;
-      document.body.appendChild(particle);
-    }
-  </script>
+  <header>
+    <p id="logo-text">Voz do Aluno</p>
 
-  <nav>
-    <a href="#" class="tab-button active" data-tab="home">Home</a>
-    <a href="#" class="tab-button" data-tab="report">Relatar</a>
-    <a href="#" class="tab-button" data-tab="servicos">Serviços</a>
-    <a href="#" class="tab-button" data-tab="contato">Contato</a>
-  </nav>
+    <script>
+      const colors = ['#8146eb', '#6930cf'];
+      for (let i = 0; i < 100; i++) {
+        const particle = document.createElement('div');
+        particle.classList.add('particle');
+        particle.style.left = `${Math.random() * 100}vw`;
+        particle.style.top = `${Math.random() * 100 + 100}vh`;
+        particle.style.background = colors[Math.floor(Math.random() * colors.length)];
+        particle.style.animationDuration = `${5 + Math.random() * 5}s`;
+        particle.style.animationDelay = `${Math.random() * 5}s`;
+        document.body.appendChild(particle);
+      }
+    </script>
 
+    <nav>
+      <a href="#" class="tab-button active" data-tab="home">Home</a>
+      <a href="#" class="tab-button" data-tab="report">Relatar</a>
+      <a href="#" class="tab-button" data-tab="contato">Contato</a>
+    </nav>
+
+  </header>
   <section id="home" class="active">
     <h1>Sobre o Projeto</h1>
     <p>
@@ -166,14 +182,6 @@
     </p>
   </section>
 
-  <section id="servicos">
-    <h1>Serviços Oferecidos Atualmente</h1>
-    <ul>
-      <li>Palestras de conscientização sobre empatia e respeito.</li>
-      <li>Plataformas para munir alunos que necessitam de relatar casos anonimamente.</li>
-    </ul>
-  </section>
-
   <section id="report">
     <h1>Relate um caso</h1>
     <p>Aqui você pode enviar um relato à direção sem revelar sua identidade.
@@ -181,30 +189,30 @@
     </p>
     <form id="formReport">
       <div class="form-group">
-        <label for="ocorrido">Explique o ocorrido, se possível com detalhes:</label>
-        <textarea id="ocorrido" name="ocorrido" rows="8" required></textarea>
+        <label for="report-ocorrido">Explique o ocorrido, se possível com detalhes:</label>
+        <textarea id="report-ocorrido" name="report-ocorrido" rows="8" required></textarea>
       </div>
 
       <div class="form-group">
-        <label for="email">(Opcional) E-mail:</label>
-        <input type="email" id="email" name="email" placeholder="Caso precise de um retorno, preencha este campo com um e-mail secundário ou descartável.">
+        <label for="report-email">(Opcional) E-mail:</label>
+        <input type="email" id="report-email" name="report-email" placeholder="Caso precise de um retorno, preencha este campo com um e-mail secundário ou descartável.">
       </div>
 
       <div class="form-group">
-        <label for="nome">(Opcional, não recomendado) Nome:</label>
-        <input type="text" id="nome" name="nome" placeholder="Caso realmente queira se identificar, preencha este campo com seu nome.">
+        <label for="report-nome">(Opcional) Nome:</label>
+        <input type="text" id="report-nome" name="report-nome" placeholder="Caso realmente queira se identificar, preencha este campo com seu nome.">
       </div>
 
       <div class="form-group">
-        <label for="série">(Opcional, não recomendado) Série/Sala:</label>
-        <input type="text" id="série" name="série" placeholder="Caso realmente queira se identificar, preencha este campo com sua série e sala.">
+        <label for="report-série">(Opcional) Série/Sala:</label>
+        <input type="text" id="report-série" name="report-série" placeholder="Caso realmente queira se identificar, preencha este campo com sua série e sala.">
       </div>
 
       <div class="form-group">
         <input type="submit" value="Enviar">
       </div>
     </form>
-    <div class="success-message" id="successMessage">Relatório enviado com sucesso!</div>
+    <div class="success-message" id="successRepMessage">Relatório enviado com sucesso!</div>
   </section>
 
   <section id="contato">
@@ -242,8 +250,8 @@
       });
     });
 
-    const form = document.getElementById('formContato');
-    form.addEventListener('submit', function (event) {
+    const cont_form = document.getElementById('formContato');
+    cont_form.addEventListener('submit', function (event) {
       event.preventDefault();
       const nome = document.getElementById('nome');
       const email = document.getElementById('email');
@@ -255,12 +263,35 @@
       }
 
       document.getElementById('successMessage').style.display = 'block';
-      form.reset();
+      cont_form.reset();
 
       setTimeout(() => {
         document.getElementById('successMessage').style.display = 'none';
       }, 3000);
     });
+
+    const report_form = document.getElementById('formReport')
+    report_form.addEventListener('submit', function (event) {
+      event.preventDefault();
+      const repNome = document.getElementById('report-nome');
+      const repEmail = document.getElementById('report-email');
+      const report = document.getElementById('report-ocorrido');
+      const repSerie = document.getElementById('report-série')
+
+      if (report.value.trim() === "") {
+        alert("Por favor, preencha o campo obrigatório.");
+        return;
+      }
+
+      document.getElementById('successRepMessage').style.display = 'block';
+      report_form.reset();
+
+      setTimeout(() => {
+        document.getElementById('successRepMessage').style.display = 'none';
+      }, 3000);
+    });
+
   </script>
+  <script src="report.js"></script>
 </body>
 </html>
