--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" type="image/x-icon" href="logo-colored.png">
+  <link rel="icon" type="image/x-icon" href="/images/logo-colored.png">
   <title>Voz do Aluno</title>
   <style>
     body {
@@ -16,7 +16,7 @@
 
     header {
       display: flex;
-      background-color: #1a1a1a;
+      background-color: #1c1c1c;
       justify-content: space-between;
       padding-left: 15px;
       padding-right: 15px;
@@ -43,7 +43,7 @@
     }
 
     nav {
-      background-color: #1a1a1a;
+      background-color: #1c1c1c;
       display: flex;
       justify-content: center;
       padding: 18px 0;
@@ -69,7 +69,7 @@
       display: none;
       max-width: 800px;
       margin: 150px auto;
-      background-color: #1a1a1a;
+      background-color: #222222;
       padding: 25px;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(227, 255, 246, 0.1);
@@ -79,6 +79,16 @@
 
     section.active {
       display: block;
+    }
+ 
+    h1{
+      font-size: 38px;
+      line-height: 0.4;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5;
     }
 
     .form-group {
@@ -150,7 +160,7 @@
 <body>
   <header>
     <div id="logo-div">
-      <img src="logo-colored.png" alt="Logo do projeto" id="logo">
+      <img src="/images/logo-colored.png" alt="Logo do projeto" id="logo">
       <p id="logo-text">Voz do Aluno</p>
     </div>
 
@@ -234,6 +244,7 @@
 
   <section id="contato">
     <h1>Quer tirar dúvidas? Fale Conosco!</h1>
+    <br>
     <form id="formContato">
       <div class="form-group">
         <label for="nome">Nome:</label>
