--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" type="image/x-icon" href="/images/logo-colored.png">
+  <link rel="icon" type="image/x-icon" href="logo-colored.png">
   <title>Voz do Aluno</title>
   <style>
     body {
@@ -160,7 +160,7 @@
 <body>
   <header>
     <div id="logo-div">
-      <img src="/images/logo-colored.png" alt="Logo do projeto" id="logo">
+      <img src="logo-colored.png" alt="Logo do projeto" id="logo">
       <p id="logo-text">Voz do Aluno</p>
     </div>
 
